# hit_cybersecurity_enhabced_by_ai

./: Lab1_Yossef_Michael.md  README.md
Lab 1 - MITRE ATT&CK Mapping/: Lab1.md  README.md
Lab 2 - Basic Anomaly Detection/: compose.yml
Lab 2 - Basic Anomaly Detection/work/: AE.ipynb  EDA.ipynb  IsolationForest.ipynb  Lab_2.ipynb
Lab 2 - Basic Anomaly Detection/work/.ipynb_checkpoints/: AE-checkpoint.ipynb
Lab1/: Lab1_Yossef_Michael.md
Lab2---Anomaly_Detection/: logs_dataset.csv
Lab2-Basic-Anomaly-Detection/: Enterprise_A.csv  Lab_2.ipynb  dataset.csv
Lab2-Basic-Anomaly-Detection/work/: .gitignore  AE.ipynb  EDA.ipynb  FakerExamlple.ipynb  Lab_2.ipynb
Lab2-Basic-Anomaly-Detection/work/.ipynb_checkpoints/: Lab_2-checkpoint.ipynb
Lab4/: pyproject.toml
Lab4---LLM_Agent/: .dockerignore  Dockerfile  compose.yml
Lab4/app/agent_designer/: README.md  agent.py
Lab4/app/dataset_eda/: agent.py
Lab4/app/llm_defense/: agent.py
Project/: Project_report.docx  README.md  anomaly_results.csv  anomaly_results_edited.csv  bootstrap.py  main.py  requirements.txt  trial.ipynb  ~$oject_report.docx
Project/Report/: Project_report.docx
Project/agents/: __init__.py  autoencoder_agent.py  base_agent.py  isolation_forest_agent.py  meta_agent.py  svm_agent.py
Project/data/: Enterprise_A.csv  Enterprise_A_edited.csv  Enterprise_B.csv  Enterprise_C.csv  data_generation.ipynb  simulated_commands2.csv
Project/utils/: EDA.py  __init__.py  best_hyperparams.py  evaluation_utils.py  feature_extraction.py  preprocessing.py  report_generator.py
(+11 files in other folders)
